# se3313-group-beige

./: README.md
client/: .gcloudignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json
client/public/assets/images/: rename.py
client/src/: App.jsx  index.css
client/src/components/: Card.jsx  CardStack.jsx  CreateGame.jsx  Game.jsx  GameList.jsx  Lobby.jsx  MainMenu.jsx  NotFound.jsx  UnoBoard.jsx  WebSocketProvider.jsx  WebSocketTester.jsx
client/src/services/: socketService.jsx
client/src/util/: config.jsx
server/: .gitignore  CMakeLists.txt  Dockerfile  README.md  runserver.bat  vcpkg.json
server/include/: game_logic.h  player_manager.h  utils.h
server/src/: game_logic.cpp  player_manager.cpp  server.cpp  utils.cpp
server/tests/: WebSocketTests.md  game_logic_test.cpp
